# todo_app

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker.sh  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
fastapi_todo/: db.py
fastapi_todo/crud/: todo_crud.py  user_crud.py
fastapi_todo/migrations/: env.py
fastapi_todo/migrations/versions/: 49f5a490db99_add_hashed_password.py  8d45f6b00beb_initial_migration.py
fastapi_todo/models/: todo.py  user.py  usermodel.py
fastapi_todo/schemas/: todoSchemas.py  todo_schemas.py  userSchemas.py  user_schemas.py
fastapi_todo/utils/: security.py
fastapi_todo/views/: todo_views.py  user_views.py
tests/: __init__.py  conftest.py
tests/crud/: test_crud.py
tests/views/: test_todo_views.py
