[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["minhtrannhat <minhtrannhat@minhtrannhat.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
fastapi = {extras = ["all"], version = "^0.79.0"}
pydantic = "^1.9.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
