[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["minhtrannhat <minhtrannhat@minhtrannhat.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
fastapi = { extras = ["all"], version = "^0.79.0" }
pydantic = { extras = ["email"], version = "^1.9.1" }
pre-commit = "^2.20.0"
autopep8 = "^1.6.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
sqlalchemy-stubs = "^0.4"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
tox = "^3.25.1"
mypy = "^0.971"
alembic = "^1.8.1"
pytest = "^7.1.2"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
